Wed Jun  4 19:53:54 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* doc/gnome-mud-manual/C/topic.dat: Removed.
	* doc/gnome-mud-plugin-api/C/topic.dat: Removed.
	* doc/xmldocs.make: change docdir to install the manuals into
	$(datadir)/gnome/help/$(PACKAGE)/$(lang), so gnome_help_display finds
	the documentation.

	* src/Makefile.am: Switch to a more common layout without a special
	target for gnome-mud.o.

Wed Jun  4 19:00:20 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* src/Makefile.am: Pass a few needed variables at compile time.
	
	* src/gnome-mud.c (main): Init gnome properly with gnome_program_init.
	
	* src/init.c (window_menu_help_manual_activate_cb): Show an error
	message if viewing help fails.
	(window_menu_plugin_api_manual_activate_cb): Likewise.

Tue Jun  3 18:02:02 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* gnome-mud.desktop.in: Changes to make it freedesktop.org-compliant.

Tue Jun  3 15:54:46 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api.xml: Change
	inclusion of monitor.py from an ENTITY to a XInclude.
	* doc/gnome-mud-manual/C/gnome-mud-manual-C.omf: Change section to
	GNOME|Games so it works with Yelp.
	* doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api-C.omf: Change
	section to GNOME|Development.
	* doc/gnome-mud-plugin-api/C/Makefile.am: add monitor.py to entities.

	* src/init.c, src/python.c: disable PyGTK stuff for now, as it's
	broken according to Petter.

	* ROADMAP: Updated.

Mon Jun  2 17:41:35 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* doc/gnome-mud-manual/C/gnome-mud-manual-C.omf: Fix DTD errors.
	* doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api-C.omf: Likewise.

Mon Jun  2 17:08:47 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* doc/gnome-mud-manual/C/gnome-mud-manual.sgml: Rename to .xml.
	* doc/gnome-mud-manual/C/gnome-mud-manual.xml: Convert to GNOME2
	documentation format.
	* doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api.sgml,